<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="30dp"
    android:background="@drawable/shape_back">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/colorDarkBlue"
        android:textSize="22dp" />

    <LinearLayout
        android:id="@+id/video1"
        android:tag="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="showVideo"
        android:background="@drawable/shape_attr"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/danbee"
            android:paddingRight="5sp"
            android:layout_weight="2"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what1"
                android:textColor="#4C4C4C"
                android:textSize="22dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who1"
                android:textColor="#FFBB00"
                android:textSize="18dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video2"
        android:tag="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="showVideo"
        android:background="@drawable/shape_attr"
        android:layout_marginTop="10dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/eunbee1"
            android:paddingRight="5sp"
            android:layout_weight="2"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what2"
                android:textSize="22dp"
                android:textColor="#4C4C4C"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who2"
                android:textSize="18dp"
                android:textColor="#FFBB00"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video3"
        android:tag="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="showVideo"
        android:background="@drawable/shape_attr"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/eunbee2"
            android:paddingRight="5sp"
            android:layout_weight="2"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what3"
                android:textSize="22dp"
                android:textColor="#4C4C4C"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who3"
                android:textSize="18dp"
                android:textColor="#FFBB00"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/video4"
        android:tag="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="showVideo"
        android:background="@drawable/shape_attr"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/eunbee3"
            android:paddingRight="5sp"
            android:layout_weight="2"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what4"
                android:textSize="22dp"
                android:textColor="#4C4C4C"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who4"
                android:textSize="18dp"
                android:textColor="#FFBB00"  />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video5"
        android:tag="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="showVideo"
        android:background="@drawable/shape_attr"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/danbee2"
            android:paddingRight="5sp"
            android:layout_weight="2"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what5"
                android:textSize="22dp"
                android:textColor="#4C4C4C"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who5"
                android:textSize="18dp"
                android:textColor="#FFBB00"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>